# Chameleon

./: .bazelrc  .dir-locals.el  .gitignore  .gitmodules  BUILD.bazel  CHANGELOG.md  Chameleons.cabal  MODULE.bazel  README.md  WORKSPACE.bazel  cabal.project  compile_flags.txt  hie.yaml  run_all_unittests.sh
Specs/: Analyzer.tla  AnalyzerAlgo.tla  AnalyzerDefines.tla  AnalyzerDefinesMain.cfg  AnalyzerDefinesMain.tla  AnalyzerMain.cfg  AnalyzerMain.tla  Chameleon.cfg  Chameleon.tla  ChameleonMain.tla  Environment.tla  (+15 more)
app/: BUILD.bazel  Main.hs  TsTransformer.cc  demo.cc
app/Chameleons/: BUILD.bazel  Chameleons.cc
parsers/: BUILD.bazel  README.md
parsers/ts/: TypeScriptLexer.cpp  TypeScriptLexer.h  TypeScriptParser.cpp  TypeScriptParser.h  TypeScriptParserBaseListener.cpp  TypeScriptParserBaseListener.h  TypeScriptParserListener.cpp  TypeScriptParserListener.h
parsers/wgsl/: GenParser.sh  WGSL.interp  WGSL.tokens  WGSL.txt  WGSLBaseListener.cpp  WGSLBaseListener.h  WGSLBaseVisitor.cpp  WGSLBaseVisitor.h  WGSLLexer.cpp  WGSLLexer.h  WGSLLexer.interp  WGSLLexer.tokens  WGSLListener.cpp  WGSLListener.h  WGSLParser.cpp  WGSLParser.h  WGSLVisitor.cpp  WGSLVisitor.h
src/: BUILD.bazel  ExprTree.h  ExprTree_unittests.cc  GenericTypes.h  MyLib.hs  Refl.h  Refl_unittests.cc  class_prop.h  rule_examples.txt  tree_sitter_unittests.cc  utility.cc  utility.h  utility_unittests.cc
src/Analysis/: BUILD.bazel  analyzer.h  analyzer_unittest.cc
src/Api/: Api_Unittests.cc  BUILD.bazel  Program.h  Rule.h  Transformer.h  Types.h
src/Base/: BUILD.bazel  BackingStore.h  TreeLayer.h  config.h  defines.h  gc_defines.h  gc_unittests.cc  generator.h  generic_parsetree.h  generic_parsetree_antlr4.cc  generic_parsetree_antlr4.h  generic_parsetree_antlr4_deepcopy.h  generic_parsetree_antlr4_gc.h  generic_parsetree_antlr4_testlang.h  generic_parsetree_antlr4_testlang_deepcopy.h  generic_parsetree_antlr4_unittests.cc  generic_parsetree_antlr4_wgsl.h  generic_parsetree_antlr4_wgsl_deepcopy.h  generic_parsetree_concrete.h  generic_parsetree_inl.h  generic_parsetree_types.h  generic_parsetree_unittests.cc  langs.h  langsInfo.h  language.cc  language.h  language_tests.cc  program.cc  program.h  program_tests.cc
src/Base/Concepts/: BUILD.bazel  concepts.h  concepts_unittests.cc  n_ary_tree.h
src/Base/testLanguage/: TestLang.g4  TestLangBaseListener.cpp  TestLangParser.h
src/ColorTalk/interpreter/: BUILD.bazel  utility.h
src/ColorTalk/interpreter/language/: BUILD.bazel  code_str.h  generator.h  generic_parsetree.h  generic_parsetree_antlr4.cc  generic_parsetree_antlr4.h  generic_parsetree_inl.h  generic_parsetree_unittests.cc  language.cc  language.h  language_tests.cc
src/ColorTalk/interpreter/parser/: BUILD.bazel  ChameleonsParser.g4  ChameleonsParserListener.h  ChameleonsParser_unittests.cc
src/Concepts/: BUILD.bazel  concepts.h  concepts_unittests.cc  n_ary_tree.h
src/Language/: BUILD.bazel  language.h  language_inl.h  language_unittests.cc
src/Misc/testLanguage/: BUILD.bazel  TestLang.g4  TestLang.interp  TestLang.tokens  TestLangBaseListener.cpp  TestLangBaseListener.h  TestLangLexer.cpp  TestLangLexer.h  TestLangLexer.interp  TestLangListener.cpp  TestLangListener.h  TestLangParser.cpp  TestLangParser.h
src/Parser/: BUILD.bazel  ExternalParser.cc  ExternalParser.h  ExternalParser_Unittests.cc  Parser-inl.h  Parser.cc  Parser.h  Parser_unittests.cc
src/TransEngine/: BUILD.bazel  BUILD.gn  PatternMatching.h  PatternMatching_Unittests.cc  SigmaTerm.h  SigmaTerm_Antlr.h
src/TransEngine/Rewrite/: BUILD.bazel  CondExpr-inl.h  CondExpr.h  CondExpr_Unittest.cc  Environment-Unittest.cc  Environment.h  Rule.h  Strategy-Unittests.cc  Strategy-inl.h  Strategy.h  Term-Unittests.cc  Term.h
src/TransEngine/Rewrite/Expr/: Expr.cc  Expr.h  Expr_Unittest.cc
src/TransEngine/TransLang/: BUILD.bazel  ChameleonsLexer.cpp  ChameleonsLexer.g4  ChameleonsLexer.h  ChameleonsLexer.interp  ChameleonsLexer.tokens  ChameleonsParser.cpp  ChameleonsParser.g4  ChameleonsParser.h  ChameleonsParser.interp  ChameleonsParser.tokens  ChameleonsParserBaseListener.cpp  ChameleonsParserBaseListener.h  ChameleonsParserBaseVisitor.cpp  ChameleonsParserBaseVisitor.h  ChameleonsParserListener.cpp  ChameleonsParserListener.h  ChameleonsParserMain-inl.h  ChameleonsParserMain.cpp  ChameleonsParserMain.h  ChameleonsParserMain_Unittest.cc  ChameleonsParserVisitor.cpp  ChameleonsParserVisitor.h  ChameleonsParser_unittests.cc  GenParser.sh
src/TransEngine/TransLang/Compiler/: ChameleonsParserMain-inl.h  ChameleonsParserMain.cpp  ChameleonsParserMain.h  ChameleonsParserMain_Unittest.cc  Functions.h  Registered-Functions.h  WhereClauseExprParsing-inl.h  WhereClauseExprParsing.h  WhereClauseExprParsing_unittest.cc
src/Transform/: BUILD.bazel  ChameleonsLexer.cpp  ChameleonsLexer.g4  ChameleonsLexer.h  ChameleonsLexer.tokens  ChameleonsParser.cpp  ChameleonsParser.h  ChameleonsParser.interp  ChameleonsParserBaseListener.cpp  ChameleonsParserBaseListener.h  ChameleonsParser_unittests.cc  GenParser.sh
src/Transformer/: BUILD.gn  PatternMatching.h  PatternMatching_Unittests.cc  SigmaTerm.h
src/analyzer/: analyzer.hh
src/rules/: rule_examples.txt
src/rules/interpreter/: BUILD.bazel  utility.h  utility_unittests.cc
src/rules/interpreter/language/: BUILD.bazel  generator.h  generic_parsetree.h  generic_parsetree_antlr4.cc  generic_parsetree_unittests.cc  language.cc  language.h  language.hh  language_tests.cc
src/rules/interpreter/language/testLanguage/: TestLangLexer.h  TestLangListener.h  TestLangParser.cpp
src/rules/interpreter/parser/: ChameleonsParser.cpp  ChameleonsParser.h  ChameleonsParser.interp  ChameleonsParser_tests.cc
src/rules/parser/: ChameleonsLexer.g4  ChameleonsParser.g4  RuleLexer.g4  RuleParser.g4
src/rules/parser/compiler/: ChameleonsLexer.cpp  ChameleonsLexer.h  ChameleonsLexer.interp  ChameleonsLexer.tokens  ChameleonsParser.cpp  ChameleonsParser.h  ChameleonsParser.interp  ChameleonsParser.tokens  ChameleonsParserBaseListener.h  ChameleonsParserListener.cpp  ChameleonsParser_tests.cc
(+8 files in other folders)
