cc_library(
    name = "chameleon",
    srcs = ["//src/Base:base_srcs",
            "//src/Parser:parser_source",
            "//src/Parser:external_parser_src",
            "//src:utility_src",
            "//src:refl_src",
            "//src/Base/Concepts:concepts_srcs",
            "//src/Misc/testLanguage:testLang_parser_srcs",
            ],
    hdrs = ["//src/Base:base_hdrs",
            "//src/Parser:parser_hdrs",
            "//src/Parser:external_parser_hdrs",
            "//src:utility_hdrs",
            "//src:refl_src",
            "//src/Base/Concepts:concepts_srcs",
            ],
    deps  = ["@antlr4_runtime//:antlr4_runtime",
             "@com_google_googletest//:gtest_main",
             "@oilpan//:cppgc",
             "//parsers:wgsl_parser",
             "@rapidcheck//:rapidcheck",
             "@plog//:plog",
            ],
    includes = ["src"],
    visibility = ["//visibility:public"]
)
