###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "chameleons",
    version = "0.1",
)

bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")

# External repositories

# Antlr4
antlr4_dep = use_extension("//:bazel/extensions.bzl", "antlr4_dep")
use_repo(antlr4_dep, "antlr4_runtime")

# Rapidcheck
rapidcheck_dep = use_extension("//:bazel/extensions.bzl", "rapidcheck_dep")
use_repo(rapidcheck_dep, "rapidcheck")

# Plog
plog_dep = use_extension("//:bazel/extensions.bzl", "plog_dep")
use_repo(plog_dep, "plog")

# TreeSitter
tree_sitter_dep = use_extension("//:bazel/extensions.bzl", "treesitter_dep")
use_repo(tree_sitter_dep, "tree_sitter")
