workspace(name="chameleons")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# External Modules
http_archive(
    name = "antlr4_runtime",
    urls =["https://www.antlr.org/download/antlr4-cpp-runtime-4.13.0-source.zip"],
    sha256 = "2e5db62acdca9adc3329c485c3b9ce3029e40d13cc9c3e74ced354e818cb63e9",
    build_file = "@//:bazel/external_builds/BUILD.antlr4_rumtime"
)

new_local_repository(
    name = "llvm_project",
    path = "third_party/llvm-project",
    build_file = "@//:bazel/external_builds/BUILD.llvm-project",
)

new_local_repository(
    name = "rapidcheck",
    path = "third_party/rapidcheck",
    build_file = "@//:bazel/external_builds/BUILD.rapidcheck"
)

new_local_repository(
    name = "plog",
    path = "third_party/plog",
    build_file = "@//:bazel/external_builds/BUILD.plog"
)

new_local_repository(
    name = "tree_sitter",
    path = "third_party/tree-sitter",
    build_file = "@//:bazel/external_builds/BUILD.tree-sitter"
)

new_local_repository(
    name = "tree_sitter_json",
    path = "parsers/tree-sitter-json",
    build_file = "@//:bazel/external_builds/BUILD.tree-sitter-json"
)

new_local_repository(
    name = "tree_sitter_wgsl",
    path = "parsers/tree-sitter-wgsl",
    build_file = "@//:bazel/external_builds/BUILD.tree-sitter-wgsl"
)

new_local_repository(
    name = "argparse",
    path = "third_party/argparse",
    build_file = "@//:bazel/external_builds/BUILD.argparse"
)
