cc_binary(
    name = "ts_transformer",
    srcs = ["TsTransformer.cc"],
    copts = [
          "-Ibazel-out/k8-fastbuild/bin/external/antlr4_runtime/antlr4_runtime/include/antlr4-runtime",
          "-std=c++20"
    ],
    deps = [
         "//parsers:ts_parser",
         "@antlr4_runtime//:antlr4_runtime"],
)
