
filegroup(
    name = "ts_parser_srcs",
    srcs = glob(["ts/**"]),
    visibility = ["//visibility:public"]
)

filegroup(
    name = "wgsl_treesitter_parser_srcs",
    srcs = [
         "tree-sitter-wgsl/src/parser.c",
         "tree-sitter-wgsl/src/scanner.c",
         "tree-sitter-wgsl/src/tree_sitter/parser.h"
         ],
    visibility = ["//visibility:public"]
)

filegroup(
    name = "json_treesitter_parser_srcs",
    srcs = [
         "tree-sitter-json/src/parser.c",
         "tree-sitter-json/src/tree_sitter/parser.h"
         ],
    visibility = ["//visibility:public"]
)


cc_library(
    name = "ts_parser",
    srcs = [":ts_parser_srcs"],
    linkstatic = True,
    copts = [
          "-Ibazel-out/k8-fastbuild/bin/external/antlr4_runtime/antlr4_runtime/include/antlr4-runtime",
          "-Ibazel-out/k8-dbg/bin/external/antlr4_runtime/antlr4_runtime/include/antlr4-runtime",
          "-std=c++20"
          ],

    deps = ["@antlr4_runtime//:antlr4_runtime"],
    visibility = ["//visibility:public"]
)
