filegroup(
    name = "utility_src",
    srcs = ["utility.h", "utility.cc", "class_prop.h",
            "GenericTypes.h"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "refl_src",
    srcs = ["Refl.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "interpreter_unittests",
    srcs = [
        ":utility_src",
        "utility_unittests.cc",
        "//src/Base:language_unittests_src",
        "//src/Base/Concepts:concepts_srcs",
        "//src/Parser:parser_unittest_src",
        "//src/Analysis:analyzer_unittest_src",
        "//src/TransEngine:transformer_unittest_srcs",
        "//src/TransEngine/TransLang:chameleons_parser_srcs",
        ":refl_src",
        "Refl_unittests.cc",
        "ExprTree.h",
        "ExprTree_unittests.cc",
        ],
    copts = [
          "-Isrc",
          "-DENABLE_GC=false",
          "-Wall",
          "-Wextra",
          "-Werror=unused-result"
          ],
    deps = [
         "@com_google_googletest//:gtest_main",
         "@rapidcheck//:rapidcheck",
         "@antlr4_runtime//:antlr4_runtime",
         "@plog//:plog",
         "@oilpan//:cppgc",
         "//parsers:ts_parser",
         "//parsers:wgsl_parser",
         ],
    visibility = ["//:__pkg__"]
)

cc_test(
    name = "tree_sitter_test",
    srcs = [
            "tree_sitter_unittests.cc",
            "//parsers:wgsl_treesitter_parser_srcs",
            "//parsers:json_treesitter_parser_srcs",
        ],
    copts = [
        "-Iexternal/tree_sitter/tree_sitter/include",
        "-Iparsers/tree-sitter-json/src",
        "-Iparsers/tree-sitter-wgsl/src",
        ],
    deps = [
         "@com_google_googletest//:gtest_main",
         "@tree_sitter//:tree_sitter",
         ]
)
