filegroup(
    name = "utility_src",
    srcs = ["utility.h", "utility.cc", "class_prop.h",
            "GenericTypes.h"],
    visibility = ["//visibility:public"],
)
filegroup(
    name = "utility_hdrs",
    srcs = ["utility.h", "class_prop.h"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "refl_src",
    srcs = ["Refl.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "interpreter_unittests",
    srcs = [
        ":utility_src",
        "utility_unittests.cc",
        "//src/Base:language_unittests_src",
        "//src/Base/Concepts:concepts_unittests_srcs",
        "//src/Parser:parser_unittest_src",
        "//src/Analysis:analyzer_unittest_src",
        "//src/TransEngine:transformer_unittest_srcs",
        "//src/TransEngine/TransLang:chameleons_parser_srcs",
        ":refl_src",
        "Refl_unittests.cc",
        "ExprTree.h",
        "ExprTree_unittests.cc",
        ],
    copts = [
          "-Wall",
          "-Wextra",
          "-Werror=unused-result"
          ] + select({
            "@chameleon//:with_gc"    : ["-DENABLE_GC=true"],
            "@chameleon//:without_gc" : ["-DENABLE_GC=false"],
          }),
    deps = [
         "@com_google_googletest//:gtest_main",
         "@rapidcheck//:rapidcheck",
         "@antlr4_runtime//:antlr4_runtime",
         "@plog//:plog",
         "//parsers:ts_parser",
         "//parsers:wgsl_parser",
         ] + select({
            "@chameleon//:with_gc"    : ["@oilpan//:cppgc"],
            "@chameleon//:without_gc" : [],
         }),
    includes = ["../src"],
    visibility = ["//:__pkg__"]
)
