filegroup(
    name = "base_srcs",
    srcs = [
         "generic_parsetree_antlr4.cc",
         "generic_parsetree_antlr4.h",
         "generic_parsetree_antlr4_testlang.h",
         "generic_parsetree_antlr4_wgsl.h",
         "generic_parsetree_antlr4_gc.h",
         "generic_parsetree_antlr4_testlang_deepcopy.h",
         "generic_parsetree_antlr4_wgsl_deepcopy.h",
         "generic_parsetree_antlr4_deepcopy.h",
         "generic_parsetree_libclang.cc",
         "generic_parsetree_inl.h",
         "generic_parsetree.h",
         "generic_parsetree_concrete.h",
         "generic_parsetree_types.h",
         "gc_defines.h",
         "config.h",
         "defines.h",
         "TreeLayer.h",
         "langs.h",
         "langsInfo.h"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "base_hdrs",
    srcs = [
         "generic_parsetree_antlr4.h",
         "generic_parsetree_antlr4_testlang.h",
         "generic_parsetree_antlr4_wgsl.h",
         "generic_parsetree_antlr4_gc.h",
         "generic_parsetree_antlr4_testlang_deepcopy.h",
         "generic_parsetree_antlr4_wgsl_deepcopy.h",
         "generic_parsetree_antlr4_deepcopy.h",
         "generic_parsetree_inl.h",
         "generic_parsetree.h",
         "generic_parsetree_concrete.h",
         "generic_parsetree_types.h",
         "gc_defines.h",
         "config.h",
         "defines.h",
         "TreeLayer.h",
         "langs.h",
         "langsInfo.h"
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "language_unittests_src",
    srcs = [
         ":base_srcs",
         "generic_parsetree_unittests.cc",
         "generic_parsetree_antlr4_unittests.cc",
         "//src/Misc/testLanguage:testLang_parser_srcs"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "gc_unittests",
    srcs = ["gc_defines.h", "gc_unittests.cc"],
    deps = ["@com_google_googletest//:gtest_main"]
           + select({
                "@chameleon//:with_gc" : ["@oilpan//:cppgc"],
                "@chameleon//:without_gc" : [],
            }),
)
