filegroup(
    name = "base_srcs",
    srcs = [
         "generic_parsetree_antlr4.cc",
         "generic_parsetree_antlr4.h",
         "generic_parsetree_antlr4_testlang.h",
         "generic_parsetree_antlr4_wgsl.h",
         "generic_parsetree_antlr4_gc.h",
         "generic_parsetree_antlr4_testlang_deepcopy.h",
         "generic_parsetree_antlr4_wgsl_deepcopy.h",
         "generic_parsetree_antlr4_deepcopy.h",
         "generic_parsetree_libclang.cc",
         "generic_parsetree_inl.h",
         "generic_parsetree.h",
         "generic_parsetree_concrete.h",
         "generic_parsetree_types.h",
         "gc_defines.h",
         "config.h",
         "defines.h",
         "TreeLayer.h",
         "langs.h",
         "langsInfo.h"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "base_hdrs",
    srcs = [
         "generic_parsetree_antlr4.h",
         "generic_parsetree_antlr4_testlang.h",
         "generic_parsetree_antlr4_wgsl.h",
         "generic_parsetree_antlr4_gc.h",
         "generic_parsetree_antlr4_testlang_deepcopy.h",
         "generic_parsetree_antlr4_wgsl_deepcopy.h",
         "generic_parsetree_antlr4_deepcopy.h",
         "generic_parsetree_inl.h",
         "generic_parsetree.h",
         "generic_parsetree_concrete.h",
         "generic_parsetree_types.h",
         "gc_defines.h",
         "config.h",
         "defines.h",
         "TreeLayer.h",
         "langs.h",
         "langsInfo.h"
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "language_unittests_src",
    srcs = [
         ":base_srcs",
         "generic_parsetree_unittests.cc",
         "generic_parsetree_antlr4_unittests.cc",
         "//src/Misc/testLanguage:testLang_parser_srcs"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "gc_unittests",
    srcs = ["gc_defines.h",
            "gc_unittests.cc",
            ":base_srcs",
            "//src/Base/Concepts:concepts_srcs",
            "//src:utility_src",
            "//src/Misc/testLanguage:testLang_parser_srcs",
            "//src/Analysis:analyzer_src",
            "//src/TransEngine:pattern_matching",
            "//src/TransEngine/Rewrite:rewrite_srcs",
            "//src/Parser:external_parser_src",
            "//src/Parser:parser_source",
            "//src/TransEngine/TransLang:chameleons_parser_srcs",
            ],
    copts = select({
                "@chameleon//:with_gc" : ["-DENABLE_GC=true"],
                "@chameleon//:without_gc" : ["-DENABLE_GC=false"],
            }),
    deps = ["@com_google_googletest//:gtest_main",
            "@antlr4_runtime//:antlr4_runtime",
            "@rapidcheck//:rapidcheck",
            "@plog//:plog",
            "//parsers:wgsl_parser",
            ]
           + select({
                "@chameleon//:with_gc" : ["@oilpan//:cppgc"],
                "@chameleon//:without_gc" : [],
            }),
    includes = ["../../src"],
)
