
filegroup(
    name = "concepts_srcs",
    srcs = ["n_ary_tree.h",
            "concepts.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "concepts_lib",
    srcs = [":concepts_srcs"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "concepts_unittests",
    srcs = [
         "concepts_unittests.cc",
         ":concepts_srcs"],
    deps = [
         "@com_google_googletest//:gtest_main",
         "@rapidcheck//:rapidcheck"
         ]
)
