filegroup(
    name = "parser_source",
    srcs = ["Parser-inl.h", "Parser.h",
            "Parser.cc"],
    visibility = ["//visibility:public"]
)

filegroup(
    name = "external_parser_src",
    srcs = ["ExternalParser.h", "ExternalParser.cc"],
    visibility = ["//visibility:public"]
)

filegroup(
    name = "parser_unittest_src",
    srcs = [":parser_source",
            ":external_parser_src",
            "Parser_unittests.cc"],
    visibility = ["//visibility:public"]
)
