
filegroup(
    name = "transformer_srcs",
    srcs = ["SigmaTerm.h",
            "PatternMatching.h"],
    visibility = ["//visibility:public"]
)

filegroup(
    name = "transformer_unittest_srcs",
    srcs = [":transformer_srcs",
            "PatternMatching_Unittests.cc"],
    visibility = ["//visibility:public"]
)

