
filegroup(
    name = "pattern_matching",
    srcs = ["SigmaTerm.h",
            "PatternMatching.h"],
    visibility = ["//visibility:public"]
)

filegroup(
    name = "transformer_unittest_srcs",
    srcs = [":pattern_matching",
            "PatternMatching_Unittests.cc",
            "//src/TransEngine/Rewrite:rewrite_unittest_srcs"],
    visibility = ["//visibility:public"]
)

