
filegroup(
    name = "concepts_srcs",
    srcs = ["n_ary_tree.h",
            "concepts.h"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "concepts_unittests_srcs",
    srcs = [":concepts_srcs",
            "concepts_unittests.cc"],
    visibility = ["//visibility:public"],
)
