filegroup(
    name = "rewrite_srcs",
    srcs = [
            # Terms
            "Term.h", "Term.cc",
            # Environment
            "Environment.h", "Environment.cc",
            # Strategy
            "Strategy.h", "Strategy-inl.h", "Strategy.cc",
            # Rule
            "Rule.h", "Rule.cc",
            ],
    visibility = ["//visibility:public"]
)

filegroup(
    name = "rewrite_unittest_srcs",
    srcs = [":rewrite_srcs",
            # Unittests
            "Term-Unittests.cc",
            "Environment-Unittest.cc",
            "Strategy-Unittests.cc",
            ],
    visibility = ["//visibility:public"]
)

cc_test(
    name = "transengine_unittest",
    srcs = [":rewrite_srcs",
            "Expr/Expr.h",
            "Expr/Expr_Unittest.cc"],
    deps = [
         "@com_google_googletest//:gtest_main",
         ]
)
