filegroup(
    name = "rewrite_srcs",
    srcs = [
            # Terms
            "Term.h", "Term.cc",
            # Environment
            "Environment.h", "Environment.cc",
            # Strategy
            "Strategy.h", "Strategy-inl.h", "Strategy.cc",
            # Rule
            "Rule.h", "Rule.cc",
            ],
    visibility = ["//visibility:public"]
)

filegroup(
    name = "rewrite_unittest_srcs",
    srcs = [":rewrite_srcs",
            # Unittests
            "Term-Unittests.cc",
            "Environment-Unittest.cc",
            "Strategy-Unittests.cc",
            ],
    visibility = ["//visibility:public"]
)

cc_test(
    name = "transengine_unittest",
    srcs = [":rewrite_srcs",
            "Expr/Expr.h",
            "Expr/Expr_Unittest.cc",
            "Environment.h",
            "//src/Analysis:analyzer_src",
            "//src/Base:generic_parsetree",
            "//src/Concepts:concepts_srcs",
            "//src:utility_src",
            "//src/Misc/testLanguage:testLang_parser_srcs"],
    copts = [
          "-Isrc",
          "-Ibazel-out/k8-fastbuild/bin/external/antlr4_runtime/antlr4_runtime/include/antlr4-runtime",
          "-Ibazel-out/k8-dbg/bin/external/antlr4_runtime/antlr4_runtime/include/antlr4-runtime",
          ],
    deps = [
         "@com_google_googletest//:gtest_main",
         "@antlr4_runtime//:antlr4_runtime",
         "@rapidcheck//:rapidcheck",
         "@plog//:plog",
         ]
)
