
filegroup(
    name = "chameleons_parser_srcs",
    srcs = glob(["*.cpp", "*.h", "*.tokens", "*.interp"]),
    visibility = ["//visibility:public"]
)

cc_test(
    name = "chameleons_parser_unittest",
    srcs = [":chameleons_parser_srcs",
            "ChameleonsParser_unittests.cc",
            "//src:utility_src"],
    copts = [
          "-Ibazel-out/k8-fastbuild/bin/external/antlr4_runtime/antlr4_runtime/include/antlr4-runtime",
          "-Ibazel-out/k8-dbg/bin/external/antlr4_runtime/antlr4_runtime/include/antlr4-runtime",
          "-Isrc",
          "-std=c++2a"],
    linkopts = ["-lglog", "-lfmt"],
    deps = [
         "@antlr4_runtime//:antlr4_runtime",
         "@com_google_googletest//:gtest_main",
         "@rapidcheck//:rapidcheck"],
)

cc_test(
    name = "chameleonsmain_unittest",
    srcs = [":chameleons_parser_srcs",

            # Compiler
            "Compiler/ChameleonsParserMain.h",
            "Compiler/ChameleonsParserMain-inl.h",
            "Compiler/ChameleonsParserMain.cpp",
            "Compiler/ChameleonsParserMain_Unittest.cc",

            "//src/Concepts:concepts_srcs",
            "//src/Misc/testLanguage:testLang_parser_srcs",
            "//src/Analysis:analyzer_src",
            "//src/TransEngine/Rewrite:rewrite_srcs",
            "//src/Base:generic_parsetree",
            "//src:utility_src",
            "//src/TransEngine:pattern_matching",
            "//src/Parser:parser_source",
            "//src/Parser:external_parser_src",
            ],
    copts = [
          "-Ibazel-out/k8-fastbuild/bin/external/antlr4_runtime/antlr4_runtime/include/antlr4-runtime",
          "-Ibazel-out/k8-dbg/bin/external/antlr4_runtime/antlr4_runtime/include/antlr4-runtime",
          "-Isrc",
          "-std=c++2a"],
    linkopts = ["-lglog", "-lfmt"],
    deps = [
         "@antlr4_runtime//:antlr4_runtime",
         "@com_google_googletest//:gtest_main",
         "@plog//:plog",
         "@rapidcheck//:rapidcheck"],
)
