
filegroup(
    name = "chameleons_parser_srcs",
    srcs = glob(["*.cpp", "*.h", "*.tokens", "*.interp"]),
    visibility = ["//visibility:public"]
)

filegroup(
    name = "chameleons_compiler_srcs",
    srcs = [
            "Compiler/ChameleonsParserMain.h",
            "Compiler/ChameleonsParserMain-inl.h",
            "Compiler/ChameleonsParserMain.cpp",
            "Compiler/ChameleonsParserMain_Unittest.cc",
            "Compiler/WhereClauseExprParsing.h",
            "Compiler/WhereClauseExprParsing-inl.h",
            "Compiler/Functions.h",
            "Compiler/Registered-Functions.h",
         ]
)

cc_test(
    name = "chameleons_parser_unittest",
    srcs = [":chameleons_parser_srcs",
            "ChameleonsParser_unittests.cc",
            "//src:utility_src"],
    copts = [
          "-Isrc"],
    linkopts = ["-lglog", "-lfmt"],
    deps = [
         "@antlr4_runtime//:antlr4_runtime",
         "@googletest//:gtest_main",
         "@rapidcheck//:rapidcheck"],
)

cc_test(
    name = "chameleonsmain_unittest",
    srcs = [":chameleons_parser_srcs",
            ":chameleons_compiler_srcs",

            "//src/Concepts:concepts_srcs",
            "//src/Misc/testLanguage:testLang_parser_srcs",
            "//src/Analysis:analyzer_src",
            "//src/TransEngine/Rewrite:rewrite_srcs",
            "//src/Base:generic_parsetree",
            "//src:utility_src",
            "//src/TransEngine:pattern_matching",
            "//src/Parser:parser_source",
            "//src/Parser:external_parser_src",
            "//src:refl_src",
            ],
    copts = ["-Isrc"],
    deps = [
         "@antlr4_runtime//:antlr4_runtime",
         "@googletest//:gtest_main",
         "@plog//:plog",
         "@rapidcheck//:rapidcheck",
         "//parsers:wgsl_parser"
         ],
)

cc_test(
    name = "where_clause_unittest",
    srcs = [
            ":chameleons_parser_srcs",
            "Compiler/WhereClauseExprParsing.h",
            "Compiler/WhereClauseExprParsing-inl.h",
            "Compiler/WhereClauseExprParsing_unittest.cc",
            "//src:utility_src",
            "//src/TransEngine/Rewrite:rewrite_srcs",
            "//src/Base:generic_parsetree",
            "//src/Concepts:concepts_srcs",
            "//src/Misc/testLanguage:testLang_parser_srcs",
            "//src/TransEngine:pattern_matching",
            "//src/Analysis:analyzer_src",
         ],
    copts = [
          "-Isrc"],
    deps = [
         "@antlr4_runtime//:antlr4_runtime",
         "@googletest//:gtest_main",
         "@plog//:plog",
         "@rapidcheck//:rapidcheck"],
)
