
filegroup(
    name = "chameleons_parser_srcs",
    srcs = glob(["*.cpp", "*.h", "*.tokens", "*.interp"]),
    visibility = ["//visibility:public"]
)

filegroup(
    name = "chameleons_compiler_srcs",
    srcs = [
            "Compiler/ChameleonsParserMain.h",
            "Compiler/ChameleonsParserMain-inl.h",
            "Compiler/ChameleonsParserMain.cpp",
            "Compiler/ChameleonsParserMain_Unittest.cc",
            "Compiler/WhereClauseExprParsing.h",
            "Compiler/WhereClauseExprParsing-inl.h",
            "Compiler/Functions.h",
            "Compiler/Registered-Functions.h",
         ]
)

cc_test(
    name = "chameleons_parser_unittest",
    srcs = [":chameleons_parser_srcs",
            "ChameleonsParser_unittests.cc",
            "//src:utility_src",
            "//src/Base/Concepts:concepts_srcs",
            "//src/Misc/testLanguage:testLang_parser_srcs",
            "//src/Base:base_srcs"],
    copts = [
          "-Isrc"],
    deps = [
         "@oilpan//:cppgc",
         "@antlr4_runtime//:antlr4_runtime",
         "//parsers:wgsl_parser",
         "@com_google_googletest//:gtest_main",
         "@rapidcheck//:rapidcheck"],
    visibility = ["//:__pkg__"],
)

cc_test(
    name = "chameleonsmain_unittest",
    srcs = [":chameleons_parser_srcs",
            ":chameleons_compiler_srcs",

            "//src/Base/Concepts:concepts_srcs",
            "//src/Misc/testLanguage:testLang_parser_srcs",
            "//src/Analysis:analyzer_src",
            "//src/TransEngine/Rewrite:rewrite_srcs",
            "//src/Base:base_srcs",
            "//src:utility_src",
            "//src/TransEngine:pattern_matching",
            "//src/Parser:parser_source",
            "//src/Parser:external_parser_src",
            "//src:refl_src",
            ],
    copts = ["-Isrc"],
    deps = [
         "@antlr4_runtime//:antlr4_runtime",
         "@com_google_googletest//:gtest_main",
         "@plog//:plog",
         "@rapidcheck//:rapidcheck",
         "//parsers:wgsl_parser",
         "@oilpan//:cppgc",
         ],
    visibility = ["//:__pkg__"],
)

cc_test(
    name = "where_clause_unittest",
    srcs = [
            ":chameleons_parser_srcs",
            "Compiler/WhereClauseExprParsing.h",
            "Compiler/WhereClauseExprParsing-inl.h",
            "Compiler/WhereClauseExprParsing_unittest.cc",
            "//src:utility_src",
            "//src/TransEngine/Rewrite:rewrite_srcs",
            "//src/Base:base_srcs",
            "//src/Base/Concepts:concepts_srcs",
            "//src/Misc/testLanguage:testLang_parser_srcs",
            "//src/TransEngine:pattern_matching",
            "//src/Analysis:analyzer_src",
            "//src:refl_src",
         ],
    copts = [
          "-Isrc"],
    deps = [
         "@antlr4_runtime//:antlr4_runtime",
         "@com_google_googletest//:gtest_main",
         "@plog//:plog",
         "@oilpan//:cppgc",
         "//parsers:wgsl_parser",
         "@rapidcheck//:rapidcheck"],
    visibility = ["//:__pkg__"],
)
